# visibility-doctor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/visibility_doctor/: __init__.py  actions.py  analyzer.py  cli.py  doctor.py
tests/: test_analyzer.py
